<resources>
    <string name="app_name">Let\'s Get Fed</string>
    <string name="add_shelf">ADD SHELF</string>
    <string name="pantry">Pantry</string>
    <string name="add_food">Add Food</string>
    <string name="add_food_caps">ADD FOOD</string>
    <string name="select_food">SELECT FOOD</string>
    <string name="food_name">Food Name</string>
    <string name="shelf_name">Shelf Name</string>
    <string name="select_shelf_type">Select Shelf Type</string>
    <string name="enter_shelf_name">enter shelf name</string>
    <string name="counter_minimum_expiration">Counter Minimum Expiration</string>
    <string name="counter_maximum_expiration">Counter Maximum Expiration</string>
    <string name="refrigerator_minimum_expiration">Refrigerator Minimum Expiration</string>
    <string name="refrigerator_maximum_expiration">Refrigerator Maximum Expiration</string>
    <string name="freezer_minimum_expiration">Freezer Minimum Expiration</string>
    <string name="freezer_maximum_expiration">Freezer Maximum Expiration</string>
    <string name="select_food_type">Select Food Type</string>
    <string name="date_purchased">DATE PURCHASED</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="do_you_want_notifications_in_the_app_outside_the_app_or_both">Do you want notifications in the app, outside the app, or both?</string>
    <string name="how_many_days_in_advance_would_you_like_to_know_about_food_expiring_the_default_is_3_days">How many days in advance would you like to know about food expiring? The default is 3 days.</string>
    <string name="counter">counter</string>
    <string name="refrigerator">refrigerator</string>
    <string name="freezer">freezer</string>
    <string name="fruit">fruit</string>
    <string name="vegetable">vegetable</string>
    <string name="protein">protein</string>
    <string name="dairy">dairy</string>
    <string name="grain">grain</string>
    <string name="beverage">beverage</string>
    <string name="outside_the_app">outside the app</string>
    <string name="inside_the_app">inside the app</string>
    <string name="both">both</string>
    <string name="apply">APPLY</string>
    <string name="color_default">e28c36</string>

    <string name="foods">
        banana
apple
grape
strawberry
orange
watermelon
lemon
blueberry
peach
pineapple
avocado
cantaloupe
cherry
lime
pear
honeydew
potato
onion
tomato
carrot
bell pepper
lettuce
broccoli
cucumber
celery
mushroom
garlic
spinach
green bean
sweet potato
cauliflower
asparagus
bacon
beef
chicken
deli meat
egg
fish
ham
hot dogs
pork
shrimp
tofu
turkey
butter
soft cheese
hard cheese
yogurt
milk
margarine
sour cream
whipped cream
ice cream
cream cheese
cottage cheese
bread
cereal
oatmeal
pasta (fresh)
rice
tortillas
packaged tea
fruit juice
soft drink
sports drink
    </string>
    <string name="delete_food">Delete Food</string>
    <string name="edit_food">Edit Food</string>

    <!--<string-array name="foodsList">-->
        <!--<item>Rice Pilaf</item>-->
    <!--</string-array>-->

    <!--<string-array name="shelfTypes">-->
        <!--<item>Counter</item>-->
        <!--<item>Refrigerator</item>-->
        <!--<item>Freezer</item>-->
    <!--</string-array>-->




</resources>
