<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/pantry"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:onClick="pantry"
        android:text="@string/pantry"
        app:layout_constraintBottom_toTopOf="@+id/guide_add_shelf_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_add_shelf_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <ScrollView
        android:id="@+id/add_shelf_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guide_add_shelf_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_add_shelf_top">

        <LinearLayout
            android:id="@+id/shelf_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shelf_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelf_name" />

            <EditText
                android:id="@+id/enter_shelf_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_shelf_name"
                android:inputType="textShortMessage"
                android:autofillHints="" />

            <TextView
                android:id="@+id/shelf_type_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_shelf_type" />

            <RadioGroup
                android:id="@+id/shelf_type_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="shelf_type_radiogroup">

                <RadioButton
                    android:id="@+id/counter_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="checkButton"
                    android:text="@string/counter" />

                <RadioButton
                    android:id="@+id/fridge_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="checkButton"
                    android:text="@string/refrigerator" />

                <RadioButton
                    android:id="@+id/freezer_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="checkButton"
                    android:text="@string/freezer" />
            </RadioGroup>

            <Button
                android:id="@+id/add_shelf_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addShelfToList"
                android:text="Add Shelf" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guide_add_shelf_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp" />

</android.support.constraint.ConstraintLayout>