<?xml version="1.0" encoding="utf-8"?>
<androidsupport.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guide_freezer_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <!--// thanks to CodingWithMitch for the RecyclerView tutorial on YouTube-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/freezer_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addFood"
        app:layout_constraintTop_toBottomOf="@+id/guide_freezer_top"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/editFood3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toEditFr"
        android:text="@string/edit_food"
        app:layout_constraintBottom_toTopOf="@+id/guide_freezer_bottom"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freezer_recyclerview"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addFood3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toAddFoodFz"
        android:text="@string/add_food"
        app:layout_constraintBottom_toTopOf="@+id/guide_freezer_bottom"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freezer_recyclerview" />

    <Button
        android:id="@+id/deleteFood3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_food"
        app:layout_constraintBottom_toTopOf="@+id/guide_freezer_bottom"
        app:layout_constraintTop_toBottomOf="@+id/freezer_recyclerview"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="149dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_freezer_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp" />

    <LinearLayout
        android:id="@+id/bottom_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_freezer_bottom">

        <ImageButton
            android:id="@+id/toPantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:contentDescription="TODO"
            android:onClick="toPantryClickFr"
            android:src="@drawable/pantry_icon" />
        <!--app:srcCompat="@drawable/pantry_icon" />-->

        <!--app:srcCompat="@drawable/alert_icon" />-->

        <ImageButton
            android:id="@+id/toAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:onClick="toAlertsClickFr"
            android:src="@drawable/alert_icon" />

        <ImageButton
            android:id="@+id/toSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:onClick="toSettingsClickFr"
            android:src="@drawable/settings_gear" />
        <!--app:srcCompat="@drawable/settings_gear" />-->
    </LinearLayout>

</androidsupport.constraint.ConstraintLayout>