<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guide_edit_food_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <ScrollView
        android:id="@+id/edit_food_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guide_edit_food_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_edit_food_top">

    <LinearLayout
        android:id="@+id/edit_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editFoodTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Food:" />

        <TextView
            android:id="@+id/edit_food_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_food" />

    <Spinner
        android:id="@+id/edit_food_dropdown_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/edit_purchase_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_purchased" />

        <HorizontalScrollView
            android:id="@+id/edit_food_date_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/edit_food_date_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/edit_date_month_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

                <Spinner
                    android:id="@+id/edit_date_day_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />

                <Spinner
                    android:id="@+id/edit_date_year_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp" />
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/edit_food_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addFoodToDatabase"
            android:text="@string/edit_food" />

    </LinearLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guide_edit_food_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp" />

    <LinearLayout
        android:id="@+id/bottom_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_edit_food_bottom">

        <ImageButton
            android:id="@+id/toPantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:contentDescription="TODO"
            android:onClick="toPantryClickE"
            android:src="@drawable/pantry_icon" />
        <!--app:srcCompat="@drawable/pantry_icon" />-->

        <!--app:srcCompat="@drawable/alert_icon" />-->

        <ImageButton
            android:id="@+id/toAlerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:onClick="toAlertsClickE"
            android:src="@drawable/alert_icon" />

        <ImageButton
            android:id="@+id/toSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:onClick="toSettingsClickE"
            android:src="@drawable/settings_gear" />
        <!--app:srcCompat="@drawable/settings_gear" />-->
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
